<resources>
    <string name="app_name">Restaurante</string>
    <string name="inicioTit">Log</string>
    <string name="sesionTit"> in </string>
    <string name="regTit1">User\'s</string>
    <string name="regTit2">register</string>
    <string name="nombre">Name</string>
    <string name="apellido">Surname</string>
    <string name="email">E-mail</string>
    <string name="contraseña">Password</string>
    <string name="inicioBut">LOG IN</string>
    <string name="registroBut">SIGN IN</string>
    <string name="recBut"> RECOVER </string>
    <string name="invitadoBut">SIGN AS GUEST</string>
    <string-array name="idiomas">
        <item> Language </item>
        <item> eu </item>
        <item> es </item>
        <item> en </item>
        <item> </item>
    </string-array>
    <string-array name="idiomas2">
        <item> eu </item>
        <item> es </item>
        <item> en </item>
        <item> </item>
    </string-array>
    <string name="idio">Language</string>
    <string name="cartaTit">MENU</string>
    <string name="carro">ORDER </string>
    <string name="salir">LOG OUT</string>
    <string name="cancelar">CANCEL</string>
    <string name="ingr">Ingredients</string>
    <string name="userTitle">User Info</string>
    <string name="recuperar">Do you forget the password?</string>
    <string name="recTit1">Recover</string>
    <string name="recTit2">password</string>
    <string name="contr6">Password must be at least 6 characters long.</string>
    <string name="vacio">Complete all sections.</string>
    <string name="regCorrecto">Register done.</string>
    <string name="usuRep">A user with this email already exists.</string>
    <string name="inicioErr">Some information is incorrect.</string>
    <string name="verif">E-mail is not verified.</string>
    <string name="idioAct">Language updated.</string>
    <string name="correo">Sended e-mail.</string>
    <string name="carrito">Cart</string>
    <string name="tot0">TOTAL: 0.00€</string>
    <string name="totAct">TOTAL: </string>
    <string name="elim">ELIMINATE</string>
    <string name="pedido">Order</string>
    <string name="fecha">Date</string>
    <string name="estado">State</string>
    <string name="desc">Discount: 5%</string>
    <string name="perfil">Profile</string>
    <string name="pedidos">Orders</string>
    <string name="local">Location</string>
    <string name="opcion">Change language</string>
</resources>